--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ code {
   bottom: 0;
   width: 100%;
   height: 4em;
-  background-color: #ccc;
+  background-color: transparent;
 }
 
 .success-msg{
@@ -77,7 +77,7 @@ code {
 /* stack game */
 * {padding: 0; margin: 0;}
         canvas{ 
-          background: #fff;
+          background-color: transparent;
           display: block; 
           margin: 0 auto;
           border: thick double #32a1ce; 
@@ -120,4 +120,13 @@ code {
 /* canvas */
 .canvas-img{
   display: none;
+  background-color: transparent;
+}
+
+
+@media only screen and (max-width : 600px) {
+  /* Styles */
+  canvas{
+    width: 100%;
+  }
 }
